// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescribeElementCardBanner renders correct snapshot 1`] = `
<WithStyles(CardContent)>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <WithStyles(Icon)
      className="DescribeElementCardBanner-icon-3"
    >
      people
    </WithStyles(Icon)>
    <WithStyles(Typography)
      className="DescribeElementCardBanner-cardTitle-1"
      type="headline"
    >
      expectedTitle
    </WithStyles(Typography)>
  </div>
</WithStyles(CardContent)>
`;

exports[`DescribeElementCardBanner renders correct snapshot with switches 1`] = `
<WithStyles(CardContent)>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <WithStyles(Typography)
      className="DescribeElementCardBanner-tallCardTitle-2"
      type="headline"
    >
      expectedTitle
    </WithStyles(Typography)>
  </div>
</WithStyles(CardContent)>
`;
